# kafka-overwatch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  config.local.yaml  docker-compose.override.yaml  docker-compose.yaml  prometheus.local.yaml  pyproject.toml  update_models.sh
.codebuild/: build_images.yml  buildspec.yaml  buildspec_docs.yaml  codebuild_docs.template  codebuild_release.template
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
compose_x/: bootstrap.yaml  ecs-compose-x.yaml  nonprod.config.yaml
docs/: Makefile  conf.py  config.rst  deploy.rst  examples.rst  features.rst  index.rst  installation.rst  lexicon.rst  make.bat  requisites.rst
kafka_overwatch/: __init__.py  cli.py  overwatch.py
kafka_overwatch/aws_helpers/: __init__.py  kafka_client_secrets.py  s3.py
kafka_overwatch/cli/: __init__.py  schema_registry_restore.py
kafka_overwatch/common/: __init__.py
kafka_overwatch/config/: __init__.py  config.py  logging.py  threads_settings.py
kafka_overwatch/kafka_resources/: __init__.py  groups.py  topics.py
kafka_overwatch/kafka_resources/acls/: __init__.py
kafka_overwatch/monitoring/: prometheus.py
kafka_overwatch/notifications/: __init__.py
kafka_overwatch/notifications/aws_sns/: __init__.py
kafka_overwatch/notifications/aws_sns/usage_report/: default.j2  email.j2
kafka_overwatch/overwatch_resources/: clusters.py  groups.py  topics.py
kafka_overwatch/overwatch_resources/clusters/: __init__.py  reporting.py  tools.py  topic_waste_categories.py
kafka_overwatch/overwatch_resources/schema_registry/: __init__.py  schema.py  schemas_restore.py  subject.py
kafka_overwatch/processing/: __init__.py  clusters.py  schema_registries.py  signals.py
kafka_overwatch/reporting/: __init__.py  schema_registry.py  tools.py  topics.py
kafka_overwatch/reporting/governance/: __init__.py  consumer_groups_naming_convention.py  topic_naming_convention.py
kafka_overwatch/specs/: __init__.py  config.json  config.py  report.json  report.py
